hw04/y.output
Terminals unused in grammar

   RANGE


State 332 conflicts: 1 shift/reduce


Grammar

    0 $accept: file $end

    1 primary_expr: identifier
    2             | CONSTANT
    3             | STRING_LITERAL
    4             | '(' expr ')'

    5 postfix_expr: primary_expr
    6             | postfix_expr '[' expr ']'
    7             | postfix_expr '(' ')'
    8             | postfix_expr '(' argument_expr_list ')'
    9             | postfix_expr '.' identifier
   10             | postfix_expr PTR_OP identifier
   11             | postfix_expr INC_OP
   12             | postfix_expr DEC_OP

   13 argument_expr_list: assignment_expr
   14                   | argument_expr_list ',' assignment_expr

   15 unary_expr: postfix_expr
   16           | INC_OP unary_expr
   17           | DEC_OP unary_expr
   18           | unary_operator cast_expr
   19           | SIZEOF unary_expr
   20           | SIZEOF '(' type_name ')'

   21 unary_operator: '&'
   22               | '*'
   23               | '+'
   24               | '-'
   25               | '~'
   26               | '!'

   27 cast_expr: unary_expr
   28          | '(' type_name ')' cast_expr

   29 multiplicative_expr: cast_expr
   30                    | multiplicative_expr '*' cast_expr
   31                    | multiplicative_expr '/' cast_expr
   32                    | multiplicative_expr '%' cast_expr

   33 additive_expr: multiplicative_expr
   34              | additive_expr '+' multiplicative_expr
   35              | additive_expr '-' multiplicative_expr

   36 shift_expr: additive_expr
   37           | shift_expr LEFT_OP additive_expr
   38           | shift_expr RIGHT_OP additive_expr

   39 relational_expr: shift_expr
   40                | relational_expr '<' shift_expr
   41                | relational_expr '>' shift_expr
   42                | relational_expr LE_OP shift_expr
   43                | relational_expr GE_OP shift_expr

   44 equality_expr: relational_expr
   45              | equality_expr EQ_OP relational_expr
   46              | equality_expr NE_OP relational_expr

   47 and_expr: equality_expr
   48         | and_expr '&' equality_expr

   49 exclusive_or_expr: and_expr
   50                  | exclusive_or_expr '^' and_expr

   51 inclusive_or_expr: exclusive_or_expr
   52                  | inclusive_or_expr '|' exclusive_or_expr

   53 logical_and_expr: inclusive_or_expr
   54                 | logical_and_expr AND_OP inclusive_or_expr

   55 logical_or_expr: logical_and_expr
   56                | logical_or_expr OR_OP logical_and_expr

   57 conditional_expr: logical_or_expr
   58                 | logical_or_expr '?' logical_or_expr ':' conditional_expr

   59 assignment_expr: conditional_expr
   60                | unary_expr assignment_operator assignment_expr

   61 assignment_operator: '='
   62                    | MUL_ASSIGN
   63                    | DIV_ASSIGN
   64                    | MOD_ASSIGN
   65                    | ADD_ASSIGN
   66                    | SUB_ASSIGN
   67                    | LEFT_ASSIGN
   68                    | RIGHT_ASSIGN
   69                    | AND_ASSIGN
   70                    | XOR_ASSIGN
   71                    | OR_ASSIGN

   72 expr: assignment_expr
   73     | expr ',' assignment_expr

   74 constant_expr: conditional_expr

   75 declaration: declaration_specifiers ';'
   76            | declaration_specifiers init_declarator_list ';'

   77 declaration_specifiers: storage_class_specifier
   78                       | storage_class_specifier declaration_specifiers
   79                       | type_specifier
   80                       | type_specifier declaration_specifiers

   81 init_declarator_list: init_declarator
   82                     | init_declarator_list ',' init_declarator

   83 init_declarator: declarator
   84                | declarator '=' initializer

   85 storage_class_specifier: TYPEDEF
   86                        | EXTERN
   87                        | STATIC
   88                        | AUTO
   89                        | REGISTER

   90 type_specifier: CHAR
   91               | SHORT
   92               | INT
   93               | LONG
   94               | SIGNED
   95               | UNSIGNED
   96               | FLOAT
   97               | DOUBLE
   98               | CONST
   99               | VOLATILE
  100               | VOID
  101               | struct_or_union_specifier
  102               | enum_specifier
  103               | TYPE_NAME

  104 struct_or_union_specifier: struct_or_union identifier '{' struct_declaration_list '}'
  105                          | struct_or_union '{' struct_declaration_list '}'
  106                          | struct_or_union identifier

  107 struct_or_union: STRUCT
  108                | UNION

  109 struct_declaration_list: struct_declaration
  110                        | struct_declaration_list struct_declaration

  111 struct_declaration: type_specifier_list struct_declarator_list ';'

  112 struct_declarator_list: struct_declarator
  113                       | struct_declarator_list ',' struct_declarator

  114 struct_declarator: declarator
  115                  | ':' constant_expr
  116                  | declarator ':' constant_expr

  117 enum_specifier: ENUM '{' enumerator_list '}'
  118               | ENUM identifier '{' enumerator_list '}'
  119               | ENUM identifier

  120 enumerator_list: enumerator
  121                | enumerator_list ',' enumerator

  122 enumerator: identifier
  123           | identifier '=' constant_expr

  124 declarator: declarator2
  125           | pointer declarator2

  126 declarator2: identifier
  127            | '(' declarator ')'
  128            | declarator2 '[' ']'
  129            | declarator2 '[' constant_expr ']'
  130            | declarator2 '(' ')'
  131            | declarator2 '(' parameter_type_list ')'
  132            | declarator2 '(' parameter_identifier_list ')'

  133 pointer: '*'
  134        | '*' type_specifier_list
  135        | '*' pointer
  136        | '*' type_specifier_list pointer

  137 type_specifier_list: type_specifier
  138                    | type_specifier_list type_specifier

  139 parameter_identifier_list: identifier_list
  140                          | identifier_list ',' ELIPSIS

  141 identifier_list: identifier
  142                | identifier_list ',' identifier

  143 parameter_type_list: parameter_list
  144                    | parameter_list ',' ELIPSIS

  145 parameter_list: parameter_declaration
  146               | parameter_list ',' parameter_declaration

  147 parameter_declaration: type_specifier_list declarator
  148                      | type_name

  149 type_name: type_specifier_list
  150          | type_specifier_list abstract_declarator

  151 abstract_declarator: pointer
  152                    | abstract_declarator2
  153                    | pointer abstract_declarator2

  154 abstract_declarator2: '(' abstract_declarator ')'
  155                     | '[' ']'
  156                     | '[' constant_expr ']'
  157                     | abstract_declarator2 '[' ']'
  158                     | abstract_declarator2 '[' constant_expr ']'
  159                     | '(' ')'
  160                     | '(' parameter_type_list ')'
  161                     | abstract_declarator2 '(' ')'
  162                     | abstract_declarator2 '(' parameter_type_list ')'

  163 initializer: assignment_expr
  164            | '{' initializer_list '}'
  165            | '{' initializer_list ',' '}'

  166 initializer_list: initializer
  167                 | initializer_list ',' initializer

  168 statement: labeled_statement
  169          | compound_statement
  170          | expression_statement
  171          | selection_statement
  172          | iteration_statement
  173          | jump_statement

  174 labeled_statement: identifier ':' statement
  175                  | CASE constant_expr ':' statement
  176                  | DEFAULT ':' statement

  177 compound_statement: '{' '}'
  178                   | '{' statement_list '}'
  179                   | '{' declaration_list '}'
  180                   | '{' declaration_list statement_list '}'

  181 declaration_list: declaration
  182                 | declaration_list declaration

  183 statement_list: statement
  184               | statement_list statement

  185 expression_statement: ';'
  186                     | expr ';'

  187 selection_statement: IF '(' expr ')' statement
  188                    | IF '(' expr ')' statement ELSE statement
  189                    | SWITCH '(' expr ')' statement

  190 iteration_statement: WHILE '(' expr ')' statement
  191                    | DO statement WHILE '(' expr ')' ';'
  192                    | FOR '(' ';' ';' ')' statement
  193                    | FOR '(' ';' ';' expr ')' statement
  194                    | FOR '(' ';' expr ';' ')' statement
  195                    | FOR '(' ';' expr ';' expr ')' statement
  196                    | FOR '(' expr ';' ';' ')' statement
  197                    | FOR '(' expr ';' ';' expr ')' statement
  198                    | FOR '(' expr ';' expr ';' ')' statement
  199                    | FOR '(' expr ';' expr ';' expr ')' statement

  200 jump_statement: GOTO identifier ';'
  201               | CONTINUE ';'
  202               | BREAK ';'
  203               | RETURN ';'
  204               | RETURN expr ';'

  205 file: external_definition
  206     | file external_definition

  207 external_definition: function_definition
  208                    | declaration

  209 function_definition: declarator function_body
  210                    | declaration_specifiers declarator function_body

  211 function_body: compound_statement
  212              | declaration_list compound_statement

  213 identifier: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'!' (33) 26
'%' (37) 32
'&' (38) 21 48
'(' (40) 4 7 8 20 28 127 130 131 132 154 159 160 161 162 187 188 189
    190 191 192 193 194 195 196 197 198 199
')' (41) 4 7 8 20 28 127 130 131 132 154 159 160 161 162 187 188 189
    190 191 192 193 194 195 196 197 198 199
'*' (42) 22 30 133 134 135 136
'+' (43) 23 34
',' (44) 14 73 82 113 121 140 142 144 146 165 167
'-' (45) 24 35
'.' (46) 9
'/' (47) 31
':' (58) 58 115 116 174 175 176
';' (59) 75 76 111 185 186 191 192 193 194 195 196 197 198 199 200
    201 202 203 204
'<' (60) 40
'=' (61) 61 84 123
'>' (62) 41
'?' (63) 58
'[' (91) 6 128 129 155 156 157 158
']' (93) 6 128 129 155 156 157 158
'^' (94) 50
'{' (123) 104 105 117 118 164 165 177 178 179 180
'|' (124) 52
'}' (125) 104 105 117 118 164 165 177 178 179 180
'~' (126) 25
error (256)
IDENTIFIER (258) 213
CONSTANT (259) 2
STRING_LITERAL (260) 3
SIZEOF (261) 19 20
PTR_OP (262) 10
INC_OP (263) 11 16
DEC_OP (264) 12 17
LEFT_OP (265) 37
RIGHT_OP (266) 38
LE_OP (267) 42
GE_OP (268) 43
EQ_OP (269) 45
NE_OP (270) 46
AND_OP (271) 54
OR_OP (272) 56
MUL_ASSIGN (273) 62
DIV_ASSIGN (274) 63
MOD_ASSIGN (275) 64
ADD_ASSIGN (276) 65
SUB_ASSIGN (277) 66
LEFT_ASSIGN (278) 67
RIGHT_ASSIGN (279) 68
AND_ASSIGN (280) 69
XOR_ASSIGN (281) 70
OR_ASSIGN (282) 71
TYPE_NAME (283) 103
TYPEDEF (284) 85
EXTERN (285) 86
STATIC (286) 87
AUTO (287) 88
REGISTER (288) 89
CHAR (289) 90
SHORT (290) 91
INT (291) 92
LONG (292) 93
SIGNED (293) 94
UNSIGNED (294) 95
FLOAT (295) 96
DOUBLE (296) 97
CONST (297) 98
VOLATILE (298) 99
VOID (299) 100
STRUCT (300) 107
UNION (301) 108
ENUM (302) 117 118 119
ELIPSIS (303) 140 144
RANGE (304)
CASE (305) 175
DEFAULT (306) 176
IF (307) 187 188
ELSE (308) 188
SWITCH (309) 189
WHILE (310) 190 191
DO (311) 191
FOR (312) 192 193 194 195 196 197 198 199
GOTO (313) 200
CONTINUE (314) 201
BREAK (315) 202
RETURN (316) 203 204


Nonterminals, with rules where they appear

$accept (86)
    on left: 0
primary_expr (87)
    on left: 1 2 3 4, on right: 5
postfix_expr (88)
    on left: 5 6 7 8 9 10 11 12, on right: 6 7 8 9 10 11 12 15
argument_expr_list (89)
    on left: 13 14, on right: 8 14
unary_expr (90)
    on left: 15 16 17 18 19 20, on right: 16 17 19 27 60
unary_operator (91)
    on left: 21 22 23 24 25 26, on right: 18
cast_expr (92)
    on left: 27 28, on right: 18 28 29 30 31 32
multiplicative_expr (93)
    on left: 29 30 31 32, on right: 30 31 32 33 34 35
additive_expr (94)
    on left: 33 34 35, on right: 34 35 36 37 38
shift_expr (95)
    on left: 36 37 38, on right: 37 38 39 40 41 42 43
relational_expr (96)
    on left: 39 40 41 42 43, on right: 40 41 42 43 44 45 46
equality_expr (97)
    on left: 44 45 46, on right: 45 46 47 48
and_expr (98)
    on left: 47 48, on right: 48 49 50
exclusive_or_expr (99)
    on left: 49 50, on right: 50 51 52
inclusive_or_expr (100)
    on left: 51 52, on right: 52 53 54
logical_and_expr (101)
    on left: 53 54, on right: 54 55 56
logical_or_expr (102)
    on left: 55 56, on right: 56 57 58
conditional_expr (103)
    on left: 57 58, on right: 58 59 74
assignment_expr (104)
    on left: 59 60, on right: 13 14 60 72 73 163
assignment_operator (105)
    on left: 61 62 63 64 65 66 67 68 69 70 71, on right: 60
expr (106)
    on left: 72 73, on right: 4 6 73 186 187 188 189 190 191 193 194
    195 196 197 198 199 204
constant_expr (107)
    on left: 74, on right: 115 116 123 129 156 158 175
declaration (108)
    on left: 75 76, on right: 181 182 208
declaration_specifiers (109)
    on left: 77 78 79 80, on right: 75 76 78 80 210
init_declarator_list (110)
    on left: 81 82, on right: 76 82
init_declarator (111)
    on left: 83 84, on right: 81 82
storage_class_specifier (112)
    on left: 85 86 87 88 89, on right: 77 78
type_specifier (113)
    on left: 90 91 92 93 94 95 96 97 98 99 100 101 102 103, on right:
    79 80 137 138
struct_or_union_specifier (114)
    on left: 104 105 106, on right: 101
struct_or_union (115)
    on left: 107 108, on right: 104 105 106
struct_declaration_list (116)
    on left: 109 110, on right: 104 105 110
struct_declaration (117)
    on left: 111, on right: 109 110
struct_declarator_list (118)
    on left: 112 113, on right: 111 113
struct_declarator (119)
    on left: 114 115 116, on right: 112 113
enum_specifier (120)
    on left: 117 118 119, on right: 102
enumerator_list (121)
    on left: 120 121, on right: 117 118 121
enumerator (122)
    on left: 122 123, on right: 120 121
declarator (123)
    on left: 124 125, on right: 83 84 114 116 127 147 209 210
declarator2 (124)
    on left: 126 127 128 129 130 131 132, on right: 124 125 128 129
    130 131 132
pointer (125)
    on left: 133 134 135 136, on right: 125 135 136 151 153
type_specifier_list (126)
    on left: 137 138, on right: 111 134 136 138 147 149 150
parameter_identifier_list (127)
    on left: 139 140, on right: 132
identifier_list (128)
    on left: 141 142, on right: 139 140 142
parameter_type_list (129)
    on left: 143 144, on right: 131 160 162
parameter_list (130)
    on left: 145 146, on right: 143 144 146
parameter_declaration (131)
    on left: 147 148, on right: 145 146
type_name (132)
    on left: 149 150, on right: 20 28 148
abstract_declarator (133)
    on left: 151 152 153, on right: 150 154
abstract_declarator2 (134)
    on left: 154 155 156 157 158 159 160 161 162, on right: 152 153
    157 158 161 162
initializer (135)
    on left: 163 164 165, on right: 84 166 167
initializer_list (136)
    on left: 166 167, on right: 164 165 167
statement (137)
    on left: 168 169 170 171 172 173, on right: 174 175 176 183 184
    187 188 189 190 191 192 193 194 195 196 197 198 199
labeled_statement (138)
    on left: 174 175 176, on right: 168
compound_statement (139)
    on left: 177 178 179 180, on right: 169 211 212
declaration_list (140)
    on left: 181 182, on right: 179 180 182 212
statement_list (141)
    on left: 183 184, on right: 178 180 184
expression_statement (142)
    on left: 185 186, on right: 170
selection_statement (143)
    on left: 187 188 189, on right: 171
iteration_statement (144)
    on left: 190 191 192 193 194 195 196 197 198 199, on right: 172
jump_statement (145)
    on left: 200 201 202 203 204, on right: 173
file (146)
    on left: 205 206, on right: 0 206
external_definition (147)
    on left: 207 208, on right: 205 206
function_definition (148)
    on left: 209 210, on right: 207
function_body (149)
    on left: 211 212, on right: 209 210
identifier (150)
    on left: 213, on right: 1 9 10 104 106 118 119 122 123 126 141
    142 174 200


State 0

    0 $accept: . file $end

    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    EXTERN      shift, and go to state 4
    STATIC      shift, and go to state 5
    AUTO        shift, and go to state 6
    REGISTER    shift, and go to state 7
    CHAR        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    CONST       shift, and go to state 16
    VOLATILE    shift, and go to state 17
    VOID        shift, and go to state 18
    STRUCT      shift, and go to state 19
    UNION       shift, and go to state 20
    ENUM        shift, and go to state 21
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    declarator                 go to state 31
    declarator2                go to state 32
    pointer                    go to state 33
    file                       go to state 34
    external_definition        go to state 35
    function_definition        go to state 36
    identifier                 go to state 37


State 1

  213 identifier: IDENTIFIER .

    $default  reduce using rule 213 (identifier)


State 2

  103 type_specifier: TYPE_NAME .

    $default  reduce using rule 103 (type_specifier)


State 3

   85 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 85 (storage_class_specifier)


State 4

   86 storage_class_specifier: EXTERN .

    $default  reduce using rule 86 (storage_class_specifier)


State 5

   87 storage_class_specifier: STATIC .

    $default  reduce using rule 87 (storage_class_specifier)


State 6

   88 storage_class_specifier: AUTO .

    $default  reduce using rule 88 (storage_class_specifier)


State 7

   89 storage_class_specifier: REGISTER .

    $default  reduce using rule 89 (storage_class_specifier)


State 8

   90 type_specifier: CHAR .

    $default  reduce using rule 90 (type_specifier)


State 9

   91 type_specifier: SHORT .

    $default  reduce using rule 91 (type_specifier)


State 10

   92 type_specifier: INT .

    $default  reduce using rule 92 (type_specifier)


State 11

   93 type_specifier: LONG .

    $default  reduce using rule 93 (type_specifier)


State 12

   94 type_specifier: SIGNED .

    $default  reduce using rule 94 (type_specifier)


State 13

   95 type_specifier: UNSIGNED .

    $default  reduce using rule 95 (type_specifier)


State 14

   96 type_specifier: FLOAT .

    $default  reduce using rule 96 (type_specifier)


State 15

   97 type_specifier: DOUBLE .

    $default  reduce using rule 97 (type_specifier)


State 16

   98 type_specifier: CONST .

    $default  reduce using rule 98 (type_specifier)


State 17

   99 type_specifier: VOLATILE .

    $default  reduce using rule 99 (type_specifier)


State 18

  100 type_specifier: VOID .

    $default  reduce using rule 100 (type_specifier)


State 19

  107 struct_or_union: STRUCT .

    $default  reduce using rule 107 (struct_or_union)


State 20

  108 struct_or_union: UNION .

    $default  reduce using rule 108 (struct_or_union)


State 21

  117 enum_specifier: ENUM . '{' enumerator_list '}'
  118               | ENUM . identifier '{' enumerator_list '}'
  119               | ENUM . identifier

    IDENTIFIER  shift, and go to state 1
    '{'         shift, and go to state 38

    identifier  go to state 39


State 22

  127 declarator2: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declarator   go to state 40
    declarator2  go to state 32
    pointer      go to state 33
    identifier   go to state 37


State 23

  133 pointer: '*' .
  134        | '*' . type_specifier_list
  135        | '*' . pointer
  136        | '*' . type_specifier_list pointer

    TYPE_NAME  shift, and go to state 2
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21
    '*'        shift, and go to state 23

    $default  reduce using rule 133 (pointer)

    type_specifier             go to state 41
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    pointer                    go to state 42
    type_specifier_list        go to state 43


State 24

  208 external_definition: declaration .

    $default  reduce using rule 208 (external_definition)


State 25

   75 declaration: declaration_specifiers . ';'
   76            | declaration_specifiers . init_declarator_list ';'
  210 function_definition: declaration_specifiers . declarator function_body

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 22
    '*'         shift, and go to state 23
    ';'         shift, and go to state 44

    init_declarator_list  go to state 45
    init_declarator       go to state 46
    declarator            go to state 47
    declarator2           go to state 32
    pointer               go to state 33
    identifier            go to state 37


State 26

   77 declaration_specifiers: storage_class_specifier .
   78                       | storage_class_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 77 (declaration_specifiers)

    declaration_specifiers     go to state 48
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30


State 27

   79 declaration_specifiers: type_specifier .
   80                       | type_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 2
    TYPEDEF    shift, and go to state 3
    EXTERN     shift, and go to state 4
    STATIC     shift, and go to state 5
    AUTO       shift, and go to state 6
    REGISTER   shift, and go to state 7
    CHAR       shift, and go to state 8
    SHORT      shift, and go to state 9
    INT        shift, and go to state 10
    LONG       shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    FLOAT      shift, and go to state 14
    DOUBLE     shift, and go to state 15
    CONST      shift, and go to state 16
    VOLATILE   shift, and go to state 17
    VOID       shift, and go to state 18
    STRUCT     shift, and go to state 19
    UNION      shift, and go to state 20
    ENUM       shift, and go to state 21

    $default  reduce using rule 79 (declaration_specifiers)

    declaration_specifiers     go to state 49
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30


State 28

  101 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 101 (type_specifier)


State 29

  104 struct_or_union_specifier: struct_or_union . identifier '{' struct_declaration_list '}'
  105                          | struct_or_union . '{' struct_declaration_list '}'
  106                          | struct_or_union . identifier

    IDENTIFIER  shift, and go to state 1
    '{'         shift, and go to state 50

    identifier  go to state 51


State 30

  102 type_specifier: enum_specifier .

    $default  reduce using rule 102 (type_specifier)


State 31

  209 function_definition: declarator . function_body
